Last commit to adjust some code and image sizes.

--- a/Base.lproj/Localizable.strings
+++ b/Base.lproj/Localizable.strings
@@ -5,8 +5,11 @@
   Created by Diego Batista Dias Leite on 25/06/17.
   Copyright © 2017 Diego Batista Dias Leite. All rights reserved.
 */
-"MyWeather" = "My Location";
-"London"    = "London";
-"Ops"       = "Ops";
-"FacebookError" = "Connection with facebook failed. Try Again.";
+"MyWeather"       = "My Location";
+"London"          = "London";
+"Ops"             = "Ops";
+"FacebookError"   = "Connection with facebook failed. Try Again.";
 "ConnectionError" = "Connection with Weather failed. Try Again.";
+"LogoutMessage"   = "%@, Do you want logout?";
+"Logout"          = "Logout";
+"Cancel"          = "Cancel";
